--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,22 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  z-index: 0;
+  position: relative;
+  width: 100%;
+  /* height: 100px; */
 }
 
-.App-header img {
+.Header {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.Logo {
+  position: absolute;
+  right: 5%;
+  height: 100%;
 }
 
 .App-link {
@@ -54,20 +59,36 @@ footer {
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 h1 {
-  font-size:26px;
-  letter-spacing:1px;
-  text-transform:uppercase;
-  text-align:center;
-  margin:auto;
-  white-space:nowrap;
+  font-size: 26px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: auto;
+  white-space: nowrap;
   padding: 1rem;
-  
-  background-color: #3c0cc260;
-  margin: 1rem 4rem 1rem 4rem;
-  border-radius: 1rem;
-
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-weight: 800;
+  font-style: normal;
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 6vw;
+    white-space: normal;
+  }
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 5vw;
+    white-space: normal;
+  }
+}
+
+p, span, div {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
   font-style: normal;
 }
